# dear-backend

./: Dockerfile  README.md  pyproject.toml
dear_backend/: __main__.py  config.py  main.py
dear_backend/core/: llm.py
dear_backend/core/models/: question.py
