[project]
name = "dear-backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Zohar Cochavi", email = "cochavi.zohar@protonmail.com" }
]
dependencies = [
    "langchain>=0.2.14",
    "beautifulsoup4>=4.12.3",
    "fastapi[standard]>=0.112.1",
    "langchain-community>=0.2.12",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dear_backend"]
